2003-11-14  Gabriele Pannocchia  <g.pannocchia@ing.unipi.it>

	* linear-algebra/krylov.m: Return H = [] in Vnrm == 0 case.

	* linear-algebra/krylovb.m: Fix typo in usage message.

	* general/isdefinite.m: New function.

2003-10-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/reshape: Delete.

2003-10-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/numel.m: Delete.

2003-10-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/horzcat.m, miscellaneous/vartcat.m: New files.

	* deprecated/isstr.m: New file.

2003-10-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/__axis_label__.m, plot/xlabel.m, plot/ylabel.m,
	plot/zlabel.m, plot/title.m: Return a value if nargout > 0.

2003-10-02  Quentin Spencer  <qspencer@ieee.org>

	* statistics/base/mean.m: Fix missing semicolon problem.

2003-09-08  Al Niessner  <Al.Niessner@jpl.nasa.gov>

	* plot/subplot.m: New global variable, __multiplot_scale__.

2003-08-29  David Castelow  <DCastelow@Airspan.com>

	* strings/dec2base.m, strings/dec2bin.m, strings/dec2hex.m:
	Allow optional length argument.

2003-08-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* polynomial/polyfit.m: Avoid calling flipud.
	From Pascal A. Dupuis <Pascal.Dupuis@esat.kuleuven.ac.be>.
	Return structure as second output value for improved Matlab
	compatibility.

2003-07-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* linear-algebra/cond.m: Behave as though old built-in variable
	propagate_empty_matrices is always 1.  Also handle empty matrices
	with one non-zero dimension.

	* miscellaneous/dump_prefs.m: Add warn_separator_insert and
	warn_single_quote_string to the list.
	Delete whitespace_in_literal_matrix and propagate_empty_matrices
	from the list.

2003-07-25  Paul Kienzle <pkienzle@users.sf.net>

	* signal/autocov.m: Transpose result of conj because diag returns
	a column vector, not a row vector.

	* audio/playaudio.m, audio/record.m, image/image.m,
	miscellaneous/bug_report.m: Protect spaces in filenames
	with quotes.
