@@ -17,18 +17,17 @@
 ## Software Foundation, 59 Temple Place, Suite 330, Boston, MA 02111 USA.
 
 ## -*- texinfo -*-
-## @deftypefn {Function File} {[@var{retval}, @var{u}] =} is_detectable (@var{a}, @var{c}, @var{tol})
-## @deftypefnx {Function File} {[@var{retval}, @var{u}] =} is_detectable (@var{sys}, @var{tol})
-## Test for detactability (observability of unstable modes) of
-## (@var{a},@var{c}).
+## @deftypefn {Function File} {@var{retval} =} is_detectable (@var{a}, @var{c}, @var{tol}, @var{dflg})
+## @deftypefnx {Function File} {@var{retval} =} is_detectable (@var{sys}, @var{tol})
+## Test for detactability (observability of unstable modes) of (@var{a},@var{c}).
 ##
 ## Returns 1 if the system @var{a} or the pair (@var{a},@var{c})is
-## detectable, 0 if not.
+## detectable, 0 if not, and -1 if the system has unobservable modes at the
+## imaginary axis (unit circle for discrete-time systems)
 ##
 ## @strong{See} @code{is_stabilizable} for detailed description of
 ## arguments and computational method.
 ##
-## Default: tol = 10*norm(a,'fro')*eps
 ##
 ## @end deftypefn
 ## @seealso{is_stabilizable, size, rows, columns, length, ismatrix,
@@ -38,27 +37,32 @@
 ## Created: August 1993
 ## Updated by John Ingram (ingraje@eng.auburn.edu) July 1996.
 
-function [retval, U] = is_detectable (a, c, tol)
+function [retval, U] = is_detectable (a, c, tol, dflg)
 
   if( nargin < 1)
-    usage("[retval,U] = is_detectable(a , c {, tol})");
+    usage("retval = is_detectable(a , {c , tol, dlfg})");
   elseif(isstruct(a))
     ## system form
     if(nargin == 2)
       tol = c;
     elseif(nargin > 2)
-      usage("[retval,U] = is_detectable(sys {, tol})");
+      usage("retval = is_detectable(sys {, tol})");
     endif
+    dflg = is_digital(a);
     [a,b,c] = sys2ss(a);
-  elseif(nargin > 3)
-    usage("[retval,U] = is_detectable(a , c {, tol})");
-  endif
-  if(exist("tol"))
-    [retval,U] = is_stabilizable (a', c', tol);
   else
-    [retval,U] = is_stabilizable (a', c');
-  endif
+    if ((nargin > 4)||(nargin == 1))
+      usage("retval = is_detectable(a , {c , tol, dflg})");
+    endif
+    if (~exist("dflg"))
+      dflg = 0;
+    end
+  end
 
+  if(~exist("tol"))
+    tol = 200*eps;
+  end    
+  retval = is_stabilizable(a',c',tol,dflg);
 
 endfunction
 
